# hopf-sta-viz

./: .gitattributes  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
docs/: hopf-sta-viz-2f60d7dcd23b9839.js  hopf-sta-viz-2f60d7dcd23b9839_bg.wasm  hopf-sta-viz-3eb2d4b939807c06.js  hopf-sta-viz-4a142117f2d15c32.js  hopf-sta-viz-4a142117f2d15c32_bg.wasm  hopf-sta-viz-72017442eeffbd84.js  hopf-sta-viz-72017442eeffbd84_bg.wasm  hopf-sta-viz-ca624092db147b5b.js  index.html  main.js
docs/impression/notes/: gemini-exploration.md
docs/notes/: DESIGN.md
shaders/: common.wgsl  fdtd_common.wgsl  fdtd_particles.wgsl  fdtd_update_b.wgsl  fdtd_update_e.wgsl  particles.wgsl  render_line.wgsl  render_point.wgsl  streamlines.wgsl
src/: app.rs  camera.rs  fdtd.rs  lib.rs  main.rs  ui.rs  web_fdtd.rs  web_gl.rs
web/: package.json  tsconfig.json
web/src/: main.ts  three-shim.d.ts
