[package]
name = "hopf-sta-viz"
version = "0.1.0"
edition = "2021"
description = "Realtime 3D visualization of the Rañada electromagnetic hopfion using Spacetime Algebra fields on the GPU (wgpu / WGSL)."
authors = ["HOPf project"]

[[bin]]
name = "hopf-sta-viz"
path = "src/main.rs"

[dependencies]
wgpu = "22.1"
winit = "0.30"
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
egui = "0.29"
egui-wgpu = { version = "0.29", features = ["winit"] }
egui-winit = { version = "0.29", default-features = false, features = ["links"] }
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
