[package]
name = "hopf-sta-viz"
version = "0.1.0"
edition = "2021"
description = "Realtime 3D visualization of the Rañada electromagnetic hopfion using Spacetime Algebra fields on the GPU (wgpu / WGSL). Runs natively (Vulkan/Metal/DX12) and in the browser (WebGPU / WASM)."
authors = ["HOPf project"]

# A library (so the wasm build can expose a #[wasm_bindgen(start)] entry) plus a
# thin native binary that just calls into it.
[lib]
name = "hopf_sta_viz"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hopf-sta-viz"
path = "src/main.rs"

# Dependencies shared by every target.
[dependencies]
wgpu = "22.1"
winit = "0.30"
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
log = "0.4"
egui = "0.29"
egui-wgpu = { version = "0.29", features = ["winit"] }
egui-winit = { version = "0.29", default-features = false, features = ["links"] }
web-time = "1.1"

# Native-only: real threads (rayon), blocking executor, env logger.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
env_logger = "0.11"
rayon = "1.10"

# Browser-only: wasm-bindgen glue, async executor, DOM access, panics/logs.
# wasm-bindgen is pinned to keep the bindgen runtime in lock-step with the
# js-sys / web-sys versions that winit + wgpu select (avoids the
# "failed to find intrinsics to enable clone_ref" CLI error from a skewed pair).
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Enable wgpu's WebGL2 backend so the browser build can render through a real
# WebGL2 context (Backends::GL) when WebGPU is unavailable/flaky. Compute
# shaders aren't supported on WebGL2, so the web build runs the physics on the
# CPU and uses the GPU only for drawing — see src/web_gl.rs.
wgpu = { version = "22.1", features = ["webgl"] }
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Navigator",
    "Element",
    "HtmlCanvasElement",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
